--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,3 +60,6 @@ flutter:
     - assets/images/SD4座り姉妹.png
     - assets/images/SD5膝枕姉妹.png
     - assets/images/SD2姉妹.png
+    - assets/images/movie.png
+    - assets/images/twitterpng.png
+    - assets/images/SD3姉妹.png
