--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,7 +13,8 @@ if (flutterRoot == null) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
+    flutterVersionCode = '3'
+//    リリース時はここのVersionCodeを+1する。
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
