--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,3 +63,4 @@ flutter:
     - assets/images/movie.png
     - assets/images/twitterpng.png
     - assets/images/SD3姉妹.png
+    - assets/images/SDアイコン茜葵正面.png
